<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meeting"
            android:textAlignment="center"
            android:textSize="35sp"
            android:padding="8dp"/>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"/>

        <EditText
            android:id="@+id/meeting_fragment_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/enter_title"/>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"/>

        <EditText
            android:id="@+id/meeting_fragment_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/enter_description"/>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_start"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/meeting_fragment_start_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"/>
            <ImageView
                android:id="@+id/meeting_fragment_start_date_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_date"/>
        </LinearLayout>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_end"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/meeting_fragment_end_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"/>
            <ImageView
                android:id="@+id/meeting_fragment_end_date_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_date"/>
        </LinearLayout>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/priority"/>
        <Spinner
            android:id="@+id/meeting_fragment_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="8dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/meeting_fragment_go"
                style="@style/btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:text="@string/i_will_go"
                android:textColor="@color/blue" />

            <Button
                android:id="@+id/meeting_fragment_create_btn"
                style="@style/btn"
                android:background="@color/background"
                android:text="@string/create"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/meeting_fragment_cancel_btn"
                style="@style/btn"
                android:background="@color/background"
                android:text="@string/cancel"
                android:textColor="@color/blue" />

        </LinearLayout>

        <Button
            android:id="@+id/meeting_fragment_share"
            style="@style/btn"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@color/background"
            android:text="@string/share"
            android:textColor="@color/colorAccent" />

    </LinearLayout>
</ScrollView>